# renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  renderer.hpp  sdl_wrap.cpp  sdl_wrap.hpp
src/scene/: camera.hpp  from_obj.cpp  from_obj.hpp  mesh.cpp  mesh.hpp  scene.hpp
